--- a/front-end/src/app/your-workouts/your-workouts.page.scss
+++ b/front-end/src/app/your-workouts/your-workouts.page.scss
@@ -22,11 +22,10 @@
 }
 
 .workouts{
-  display: inline-grid;
-  margin-bottom: 5.5%;
   transition: border 0.1s;
   transition-timing-function: linear;
-  min-height: 200px;
+  width: 310px;
+  height: 250px;
 }
 
 .workouts:hover{
@@ -36,12 +35,6 @@
   border-style: ridge;
 }
 
-.ion-justify-content-center{
-  display: block;
-  position: absolute;
-  left: 0;
-  width: 99%;
-}
 
 #AddWorkout{
     width: var(--icon-size);
@@ -91,12 +84,14 @@
     --color: var(--ion-color-tertiary);
     --color-hover: var(--ion-color-primary);
     --background-activated: none;
+    display: block;
+    margin-top: 25%;
 }
 
 #shareBtn{
   position: absolute;
-  bottom: 88%;
-  left: 90%;
+  bottom: 89%;
+  left: 92%;
   width: 25px;
   height: 30px;
   z-index: 10000;
@@ -129,59 +124,6 @@
     margin-left: 45%;
     margin-right: auto;
   }
-
-@media screen and (max-width: 646px) {
-  .ion-justify-content-center{
-    display: block;
-    position: absolute;
-    left: 170px;
-    width: 570px;
-  }
-}
-
-@media screen and (min-width: 700px) {
-  #shareBtn{
-    left: 92.5%;
-  }
-}
-
-@media screen and (max-width: 768px){
-    .workouts{
-      width: 600px;
-      height: 200px;
-    }
-}
-
-@media screen and (max-width: 992px) {
-  .workouts{
-    width: 45%;
-    height: 100%;
-  }
-
-  #shareBtn{
-    bottom: 86.5%;
-  }
-
-}
-
-@media screen and (min-width: 993px) {
-  .workouts{
-    width: 23%;
-  }
-
-  #shareBtn{
-    left: 90%;
-    bottom: 86.5%;
-  }
-}
-
-@media screen and (min-width: 1600px) {
-
-  #shareBtn{
-    left: 92.5%;
-    bottom: 86.5%;
-  }
-}
 
 .text{
     display: inline-block;
